<!--
/*
   This file is part of RailRoad.

   RailRoad is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, version 3 of the License.

   RailRoad is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with RailRoad.  If not, see <http://www.gnu.org/licenses/>.

*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    tools:context="edu.wwu.railroad.MainActivity$PlaceholderFragment"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/ipLabel"
        />
    <EditText
        android:id="@+id/connectIP"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:hint="@string/ipHint"
        android:inputType="textUri"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:text="@string/portLabel"
        />
    <EditText
        android:id="@+id/connectPort"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:hint="@string/portHint"
        android:inputType="number"
        />
    <Button
        android:id="@+id/connectButton"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/connect"
        android:textSize="30sp"
        style="?android:attr/buttonBarButtonStyle"
        />
</LinearLayout>
