<!--
/*
   This file is part of RailRoad.

   RailRoad is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, version 3 of the License.

   RailRoad is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with RailRoad.  If not, see <http://www.gnu.org/licenses/>.

*/
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    >
    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:gravity="center"
        android:text="@string/tokenLabel"
        android:textSize="17sp"
        />
    <EditText
        android:id="@+id/tokenBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/tokenHint"
        android:textSize="17sp"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/tokenOkay"
            android:layout_width="120dp"
            android:layout_height="75dp"
            android:padding="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/tokenOkay"
	        android:textSize="25sp"
        	style="?android:attr/buttonBarButtonStyle"
            />
	    <Button
	        android:id="@+id/tokenCancel"
	        android:layout_width="120dp"
	        android:layout_height="75dp"
	        android:padding="5dp"
            android:layout_marginLeft="10dp"
	        android:text="@string/tokenCancel"
	        android:textSize="25sp"
        	style="?android:attr/buttonBarButtonStyle"
	        />
    </LinearLayout>
</LinearLayout>